RESOLVED FIXED153822
[TexMap] Don't use RELEASE_ASSERT in TextureMapperLayer::computeTransformsRecursive()
https://bugs.webkit.org/show_bug.cgi?id=153822
Summary [TexMap] Don't use RELEASE_ASSERT in TextureMapperLayer::computeTransformsRec...
Zan Dobersek
Reported 2016-02-02 22:36:46 PST
[TexMap] Don't use RELEASE_ASSERT in TextureMapperLayer::computeTransformsRecursive()
Attachments
Patch (1.61 KB, patch)
2016-02-02 22:38 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2016-02-02 22:38:04 PST
Zan Dobersek
Comment 2 2016-02-03 00:34:47 PST
Comment on attachment 270554 [details] Patch Clearing flags on attachment: 270554 Committed r196055: <http://trac.webkit.org/changeset/196055>
Zan Dobersek
Comment 3 2016-02-03 00:34:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.