[TexMap] Don't use RELEASE_ASSERT in TextureMapperLayer::computeTransformsRecursive() https://bugs.webkit.org/show_bug.cgi?id=153822

Reviewed by Carlos Garcia Campos.

* platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::computeTransformsRecursive):
Use ASSERT to check that the m_children members are indeed children
of the current layer, RELEASE_ASSERT probably slipped in unnoticed
at some point.


Canonical link: https://commits.webkit.org/171912@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196055 268f45cc-cd09-0410-ab3c-d52691b4dbfc